# eos_test

./: .gitignore  README.md
assets/: image.fsh  masked_image.fsh  masked_image.vsh  simple.fsh  simple.vsh
cmake_build/android/: CMakeLists.txt  gen.sh
cmake_build/android/toolchain/: android.toolchain.cmake
cmake_build/common/: freetype.cmake  game.cmake
cmake_build/linux/: CMakeLists.txt  gen.sh
cmake_build/win/: CMakeLists.txt  build.bat  gen.bat
cmake_modules/: FindGLog.cmake
game/: Application.cpp  Application.hpp
game/fonts/: Font.cpp  Font.hpp  FontLayout.cpp  FontLayout.hpp  Manager.cpp  Manager.hpp  forwards.hpp  types.hpp
game/freetype/: FTFace.cpp  FTFace.hpp  FTGlyph.cpp  FTGlyph.hpp  FTLibrary.cpp  FTLibrary.hpp  forwards.hpp  macro.hpp  types.cpp  types.hpp
game/graphics/: 125p0no1.wsw  Context.cpp  Context.hpp  GBox.cpp  GBox.hpp  GContainer.cpp  GContainer.hpp  GImage.cpp  GImage.hpp  GImages.cpp  GImages.hpp  GMeshable.cpp  GMeshable.hpp  GObject.cpp  GObject.hpp  GRectangle.cpp  GRectangle.hpp  GWidget.cpp  GWidget.hpp  MatrixStack.cpp  MatrixStack.hpp  ObjectsContainer.cpp  ObjectsContainer.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  events.hpp  forwards.hpp  gl.hpp  types.hpp
game/memory/: Cache.cpp  Cache.hpp  Manager.cpp  Manager.hpp  forwards.hpp
game/network/: Client.cpp  Client.hpp
game/resources/: FileSystem.cpp  FileSystem.hpp  Image.cpp  Image.hpp  ImageLoader.cpp  ImageLoader.hpp  forwards.hpp  stb_image.h  stb_image_write.h
game/scene/: Location.cpp  Location.hpp
game/utils/: bytearray.h  bytearray.hpp  deleter.hpp  enable_shared_from_this.hpp  forwards.hpp  functional.hpp  gettid.h  libgen.cpp  libgen.hpp  log.cpp  log.h  log.hpp  spin_lock.hpp  split.cpp  split.hpp  strbuilder.hpp  string_utils.cpp  string_utils.hpp  task_queue.cpp  task_queue.hpp  time.hpp  to_string.hpp  unused.hpp  winlog.h  winlog.hpp
lib/glog/autom4te.cache/: requests
lib/glog/m4/: .directory
lib/glog/src/: .directory
lib/win/x64/: libglog.lib
lib/win/x86/: libglog.lib
platform/android/: .project  AndroidManifest.xml  build.xml
platform/android/cpp/: FileSystemImpl.cpp  android_log.cpp  android_log.hpp
platform/android/jni/: EOSActivity.cpp  EOSGLRenderer.cpp  EOSGLSurfaceView.cpp  Log.cpp  MainWindow.cpp  MainWindow.hpp
platform/android/jni/utils/: JNI.cpp  JNI.hpp  JString.hpp
platform/android/res/values/: strings.xml
platform/android/src/com/eosproject/eos/: EOSActivity.java
platform/android/src/com/eosproject/graphics/: EOSGLRenderer.java  EOSGLSurfaceView.java
platform/android/src/com/eosproject/resources/: FileSystem.java
platform/android/src/com/eosproject/utils/: LOG.java
platform/desktop/: FileSystemImpl.cpp  MainWindow.cpp  MainWindow.hpp
platform/linux/: .directory  EoS.cpp  MainWindow.cpp  MainWindow.hpp  log.cpp
platform/linux/memory/: ManagerImpl.cpp
platform/win/: EoS.cpp  MainWindow.cpp  MainWindow.hpp  Renderer.cpp  Renderer.h  basename.c  libgen.h  log.cpp
platform/win/memory/: ManagerImpl.cpp
platform/win/utils/: time_impl.cpp  time_impl.hpp
